tests/fixtures/invalid/pow_bytes_list_bool.py
# Cannot call pow() with Bytes, List[int], Bool
x = pow(b"hello", [1, 2, 3], True)
